Add TSOLT links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
   <h2>Start here</h2>
   <ol>
-    <li><strong>TSOLT</strong> — Trace Source Origin of Life Theory (add links)</li>
+    <li><strong>TSOLT</strong> — Trace Source Origin of Life Theory —
+  <a href="https://philarchive.org/rec/SOTTSO-5">PhilArchive</a> |
+  <a href="https://doi.org/10.17605/OSF.IO/7QC6N">OSF</a> |
+  <a href="https://doi.org/10.5281/zenodo.18421688">Zenodo</a>
+</li>
     <li><strong>UInDT</strong> — Unified Informational Dynamics Theory (add links)</li>
     <li><strong>UNET</strong> — Unified Natural Ethics Theory (add links)</li>
     <li><strong>UNERT</strong> — Unified Natural Emergent Reactivity Theory (add links)</li>
