--- a/index.html
+++ b/index.html
@@ -16,14 +16,46 @@
   <a href="https://doi.org/10.17605/OSF.IO/7QC6N">OSF</a> |
   <a href="https://doi.org/10.5281/zenodo.18421688">Zenodo</a>
 </li>
-    <li><strong>UInDT</strong> — Unified Informational Dynamics Theory (add links)</li>
-    <li><strong>UNET</strong> — Unified Natural Ethics Theory (add links)</li>
-    <li><strong>UNERT</strong> — Unified Natural Emergent Reactivity Theory (add links)</li>
-    <li><strong>TSEIDT</strong> — (add links)</li>
-    <li><strong>TSI-OCT</strong> — (add links)</li>
-    <li><strong>TSEET</strong> — (add links)</li>
-    <li><strong>TSRECT</strong> — (add links)</li>
-    <li><strong>TSRET</strong> — (add links)</li>
+    <li><strong>UInDT</strong> — Unified Informational Dynamics Theory (Release v0.1) —
+    <a href="https://philpapers.org/rec/SOTUID">PhilPapers</a> |
+    <a href="https://osf.io/n4fv6/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18154983">Zenodo</a>
+  </li>
+    <li><strong>UNET</strong> — Emergent Trace-Based Ethics for AI and Socio-Cultural-Technical Systems (Release v0.1.1) —
+    <a href="https://philpapers.org/rec/SOTETE">PhilPapers</a> |
+    <a href="https://osf.io/r2gte/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18164257">Zenodo</a>
+  </li>
+    <li><strong>UNERT</strong> — Unified Natural Emergent Reactivity Theory —
+    <a href="https://philpapers.org/rec/SOTRPA">PhilPapers</a> |
+    <a href="https://osf.io/3r2cw/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18343562">Zenodo</a>
+  </li>
+    <li><strong>TSEIDT</strong> — Trace Source Emergent Information Dynamics Theory —
+    <a href="https://philpapers.org/rec/SOTTSE">PhilPapers</a> |
+    <a href="https://osf.io/y2n59/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18284370">Zenodo</a>
+  </li>
+    <li><strong>TSI-OCT</strong> — Trace Source Emergent Origin of Culture Theory —
+    <a href="https://philpapers.org/rec/SOTTSE-2">PhilPapers</a> |
+    <a href="https://osf.io/xktz7/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18407228">Zenodo</a>
+  </li>
+    <li><strong>TSEET</strong> — Trace-Sourced Operator Chain for Mechanistic Evolutionary Accumulation —
+    <a href="https://philpapers.org/rec/SOTTOC">PhilPapers</a> |
+    <a href="https://osf.io/6upk5/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18407706">Zenodo</a>
+  </li>
+    <li><strong>TSRECT</strong> — Trace-Source Rational Equivalency Communication Theory —
+    <a href="https://philpapers.org/rec/SOTTRE">PhilPapers</a> |
+    <a href="https://osf.io/bs8dn/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18451237">Zenodo</a>
+  </li>
+    <li><strong>TSRET</strong> — Trace Source Rational Equivalency Theory —
+    <a href="https://philpapers.org/rec/SOTTSR">PhilPapers</a> |
+    <a href="https://osf.io/kw6mg/overview">OSF</a> |
+    <a href="https://zenodo.org/records/18473287">Zenodo</a>
+  </li>
   </ol>
 </body>
 </html>
