Use this page as the master corridor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Armando Soto — Published Theories</h1>
   <p>Canonical index and entry points to the published theory suite.</p>
-
+<p><strong>Canonical entry:</strong> Use this page as the master corridor. Each theory record links back here.</p>
   <h2>Start here</h2>
   <ol>
     <li><strong>TSOLT</strong> — Trace Source Origin of Life Theory —
