Link TSOLT to landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p><strong>Canonical entry:</strong> Use this page as the master corridor. Each theory record links back here.</p>
   <h2>Start here</h2>
   <ol>
-    <li><strong>TSOLT</strong> — Trace Source Origin of Life Theory —
+    <li><strong><a href="https://armandosotouidt.github.io/tsolt/">TSOLT</a></strong> — Trace Source Origin of Life Theory —
   <a href="https://philarchive.org/rec/SOTTSO-5">PhilArchive</a> |
   <a href="https://doi.org/10.17605/OSF.IO/7QC6N">OSF</a> |
   <a href="https://doi.org/10.5281/zenodo.18421688">Zenodo</a>
