Link UInDT to landing page
Link UInDT to landing page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="https://doi.org/10.17605/OSF.IO/7QC6N">OSF</a> |
   <a href="https://doi.org/10.5281/zenodo.18421688">Zenodo</a>
 </li>
-    <li><strong>UInDT</strong> — Unified Informational Dynamics Theory (Release v0.1) —
+    <li><strong><a href="https://armandosotouidt.github.io/uindt/">UInDT</a></strong> — Unified Informational Dynamics Theory (Release v0.1) —
     <a href="https://philpapers.org/rec/SOTUID">PhilPapers</a> |
     <a href="https://osf.io/n4fv6/overview">OSF</a> |
     <a href="https://zenodo.org/records/18154983">Zenodo</a>
