Link UNET to landing page
Link UNET to landing page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="https://osf.io/r2gte/overview">OSF</a> |
     <a href="https://zenodo.org/records/18164257">Zenodo</a>
   </li>
-    <li><strong>UNERT</strong> — Unified Natural Emergent Reactivity Theory —
+    <li><strong><a href="https://armandosotouidt.github.io/unet/">UNET</a></strong> — Unified Natural Emergent Reactivity Theory —
     <a href="https://philpapers.org/rec/SOTRPA">PhilPapers</a> |
     <a href="https://osf.io/3r2cw/overview">OSF</a> |
     <a href="https://zenodo.org/records/18343562">Zenodo</a>
