Link UNERT to landing page
Link UNERT to landing page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="https://osf.io/3r2cw/overview">OSF</a> |
     <a href="https://zenodo.org/records/18343562">Zenodo</a>
   </li>
-    <li><strong>TSEIDT</strong> — Trace Source Emergent Information Dynamics Theory —
+    <li><strong><a href="https://armandosotouidt.github.io/unert/">UNERT</a></strong> — Trace Source Emergent Information Dynamics Theory —
     <a href="https://philpapers.org/rec/SOTTSE">PhilPapers</a> |
     <a href="https://osf.io/y2n59/overview">OSF</a> |
     <a href="https://zenodo.org/records/18284370">Zenodo</a>
