Link TSEIDT to landing page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="https://osf.io/n4fv6/overview">OSF</a> |
     <a href="https://zenodo.org/records/18154983">Zenodo</a>
   </li>
-    <li><strong>UNET</strong> — Emergent Trace-Based Ethics for AI and Socio-Cultural-Technical Systems (Release v0.1.1) —
+    <li><strong><a href="https://armandosotouidt.github.io/tseidt/">TSEIDT</a></strong> — Emergent Trace-Based Ethics for AI and Socio-Cultural-Technical Systems (Release v0.1.1) —
     <a href="https://philpapers.org/rec/SOTETE">PhilPapers</a> |
     <a href="https://osf.io/r2gte/overview">OSF</a> |
     <a href="https://zenodo.org/records/18164257">Zenodo</a>
