Link TSI-OCT to landing page
Link TSI-OCT to landing page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a href="https://osf.io/y2n59/overview">OSF</a> |
     <a href="https://zenodo.org/records/18284370">Zenodo</a>
   </li>
-    <li><strong>TSI-OCT</strong> — Trace Source Emergent Origin of Culture Theory —
+    <li><strong><a href="https://armandosotouidt.github.io/tsi-oct/">TSI-OCT</a></strong> — Trace Source Emergent Origin of Culture Theory —
     <a href="https://philpapers.org/rec/SOTTSE-2">PhilPapers</a> |
     <a href="https://osf.io/xktz7/overview">OSF</a> |
     <a href="https://zenodo.org/records/18407228">Zenodo</a>
