Link TSEET to landing page
Link TSEET to landing page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <a href="https://osf.io/xktz7/overview">OSF</a> |
     <a href="https://zenodo.org/records/18407228">Zenodo</a>
   </li>
-    <li><strong>TSEET</strong> — Trace-Sourced Operator Chain for Mechanistic Evolutionary Accumulation —
+    <li><strong><a href="https://armandosotouidt.github.io/tseet/">TSEET</a></strong> — Trace-Sourced Operator Chain for Mechanistic Evolutionary Accumulation —
     <a href="https://philpapers.org/rec/SOTTOC">PhilPapers</a> |
     <a href="https://osf.io/6upk5/overview">OSF</a> |
     <a href="https://zenodo.org/records/18407706">Zenodo</a>
