Link TSRET to landing page
Link TSRET to landing page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a href="https://osf.io/6upk5/overview">OSF</a> |
     <a href="https://zenodo.org/records/18407706">Zenodo</a>
   </li>
-    <li><strong>TSRECT</strong> — Trace-Source Rational Equivalency Communication Theory —
+    <li><strong><a href="https://armandosotouidt.github.io/tsret/">TSRET</a></strong> — Trace-Source Rational Equivalency Communication Theory —
     <a href="https://philpapers.org/rec/SOTTRE">PhilPapers</a> |
     <a href="https://osf.io/bs8dn/overview">OSF</a> |
     <a href="https://zenodo.org/records/18451237">Zenodo</a>
