Fix master index labels/links
Fix master index labels/links

--- a/index.html
+++ b/index.html
@@ -12,50 +12,58 @@
   <h2>Start here</h2>
   <ol>
     <li><strong><a href="https://armandosotouidt.github.io/tsolt/">TSOLT</a></strong> — Trace Source Origin of Life Theory —
-  <a href="https://philarchive.org/rec/SOTTSO-5">PhilArchive</a> |
-  <a href="https://doi.org/10.17605/OSF.IO/7QC6N">OSF</a> |
-  <a href="https://doi.org/10.5281/zenodo.18421688">Zenodo</a>
-</li>
+      <a href="https://philarchive.org/rec/SOTTSO-5">PhilArchive</a> |
+      <a href="https://doi.org/10.17605/OSF.IO/7QC6N">OSF</a> |
+      <a href="https://doi.org/10.5281/zenodo.18421688">Zenodo</a>
+    </li>
+
     <li><strong><a href="https://armandosotouidt.github.io/uindt/">UInDT</a></strong> — Unified Informational Dynamics Theory (Release v0.1) —
-    <a href="https://philpapers.org/rec/SOTUID">PhilPapers</a> |
-    <a href="https://osf.io/n4fv6/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18154983">Zenodo</a>
-  </li>
-    <li><strong><a href="https://armandosotouidt.github.io/tseidt/">TSEIDT</a></strong> — Emergent Trace-Based Ethics for AI and Socio-Cultural-Technical Systems (Release v0.1.1) —
-    <a href="https://philpapers.org/rec/SOTETE">PhilPapers</a> |
-    <a href="https://osf.io/r2gte/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18164257">Zenodo</a>
-  </li>
-    <li><strong><a href="https://armandosotouidt.github.io/unet/">UNET</a></strong> — Unified Natural Emergent Reactivity Theory —
-    <a href="https://philpapers.org/rec/SOTRPA">PhilPapers</a> |
-    <a href="https://osf.io/3r2cw/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18343562">Zenodo</a>
-  </li>
-    <li><strong><a href="https://armandosotouidt.github.io/unert/">UNERT</a></strong> — Trace Source Emergent Information Dynamics Theory —
-    <a href="https://philpapers.org/rec/SOTTSE">PhilPapers</a> |
-    <a href="https://osf.io/y2n59/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18284370">Zenodo</a>
-  </li>
+      <a href="https://philpapers.org/rec/SOTUID">PhilPapers</a> |
+      <a href="https://osf.io/n4fv6/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18154983">Zenodo</a>
+    </li>
+
+    <li><strong><a href="https://armandosotouidt.github.io/unet/">UNET</a></strong> — Emergent Trace-Based Ethics for AI and Socio-Cultural-Technical Systems (Release v0.1.1) —
+      <a href="https://philpapers.org/rec/SOTETE">PhilPapers</a> |
+      <a href="https://osf.io/r2gte/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18164257">Zenodo</a>
+    </li>
+
+    <li><strong><a href="https://armandosotouidt.github.io/unert/">UNERT</a></strong> — Unified Natural Emergent Reactivity Theory —
+      <a href="https://philpapers.org/rec/SOTRPA">PhilPapers</a> |
+      <a href="https://osf.io/3r2cw/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18343562">Zenodo</a>
+    </li>
+
+    <li><strong><a href="https://armandosotouidt.github.io/tseidt/">TSEIDT</a></strong> — Trace Source Emergent Information Dynamics Theory —
+      <a href="https://philpapers.org/rec/SOTTSE">PhilPapers</a> |
+      <a href="https://osf.io/y2n59/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18284370">Zenodo</a>
+    </li>
+
     <li><strong><a href="https://armandosotouidt.github.io/tsi-oct/">TSI-OCT</a></strong> — Trace Source Emergent Origin of Culture Theory —
-    <a href="https://philpapers.org/rec/SOTTSE-2">PhilPapers</a> |
-    <a href="https://osf.io/xktz7/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18407228">Zenodo</a>
-  </li>
+      <a href="https://philpapers.org/rec/SOTTSE-2">PhilPapers</a> |
+      <a href="https://osf.io/xktz7/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18407228">Zenodo</a>
+    </li>
+
     <li><strong><a href="https://armandosotouidt.github.io/tseet/">TSEET</a></strong> — Trace-Sourced Operator Chain for Mechanistic Evolutionary Accumulation —
-    <a href="https://philpapers.org/rec/SOTTOC">PhilPapers</a> |
-    <a href="https://osf.io/6upk5/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18407706">Zenodo</a>
-  </li>
-    <li><strong><a href="https://armandosotouidt.github.io/tsret/">TSRET</a></strong> — Trace-Source Rational Equivalency Communication Theory —
-    <a href="https://philpapers.org/rec/SOTTRE">PhilPapers</a> |
-    <a href="https://osf.io/bs8dn/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18451237">Zenodo</a>
-  </li>
-    <li><strong>TSRET</strong> — Trace Source Rational Equivalency Theory —
-    <a href="https://philpapers.org/rec/SOTTSR">PhilPapers</a> |
-    <a href="https://osf.io/kw6mg/overview">OSF</a> |
-    <a href="https://zenodo.org/records/18473287">Zenodo</a>
-  </li>
+      <a href="https://philpapers.org/rec/SOTTOC">PhilPapers</a> |
+      <a href="https://osf.io/6upk5/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18407706">Zenodo</a>
+    </li>
+
+    <li><strong><a href="https://armandosotouidt.github.io/tsrect/">TSRECT</a></strong> — Trace-Source Rational Equivalency Communication Theory —
+      <a href="https://philpapers.org/rec/SOTTRE">PhilPapers</a> |
+      <a href="https://osf.io/bs8dn/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18451237">Zenodo</a>
+    </li>
+
+    <li><strong><a href="https://armandosotouidt.github.io/tsret/">TSRET</a></strong> — Trace Source Rational Equivalency Theory —
+      <a href="https://philpapers.org/rec/SOTTSR">PhilPapers</a> |
+      <a href="https://osf.io/kw6mg/overview">OSF</a> |
+      <a href="https://zenodo.org/records/18473287">Zenodo</a>
+    </li>
   </ol>
 </body>
 </html>
